--- a/.github/workflows/check-has-readme.yml
+++ b/.github/workflows/check-has-readme.yml
@@ -29,7 +29,7 @@ jobs:
        with:
          clientId: ${{ secrets.PORT_CLIENT_ID }}
          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-         title: readme
+         title: readme-checkrun-payment-service
          blueprint: CheckRun
          properties: |
            {
