--- a/.github/workflows/run-maturity-tests.yml
+++ b/.github/workflows/run-maturity-tests.yml
@@ -48,6 +48,8 @@ jobs:
             }            
       - name: Get all checks and latest runs on the service
         run: |
-          for x in ${{ steps.search-checks.outputs.entities }}:
-            print(x)
+          for check in ${{ steps.search-checks.outputs.entities }}:
+            currentCheckCheckRuns = [checkRun for checkRun in ${{ steps.search-check-runs.outputs.entities }} if checkRun.relations.check == check.identifier] 
+            latestCheckRun = max(currentCheckCheckRuns, key=lambda checkRun: checkRun.createdAt)
+            echo latestCheckRun
         shell: python
