--- a/.github/workflows/run-maturity-tests.yml
+++ b/.github/workflows/run-maturity-tests.yml
@@ -48,8 +48,14 @@ jobs:
             }            
       - name: Get all checks and latest runs on the service
         run: |
-          for check in ${{ steps.search-checks.outputs.entities }}:
+          checks = sorted(${{ steps.search-checks.outputs.entities }}, key=lambda check: check["tier"], reverse=True)
+          finalTier = checks[0]["tier"]
+          for check in checks:
             currentCheckCheckRuns = [checkRun for checkRun in ${{ steps.search-check-runs.outputs.entities }} if checkRun["relations"]["check"] == check["identifier"]] 
             latestCheckRun = max(currentCheckCheckRuns, key=lambda checkRun: checkRun["createdAt"])
-            print(latestCheckRun)
+            if latestCheckRun["properties"]["status"] == "success": 
+              finalTier = check["tier"]
+            else:
+              break
+          print(f`::set-output name=final-tier::{finalTier}`)
         shell: python
