--- a/.github/workflows/check-pager-duty.yml
+++ b/.github/workflows/check-pager-duty.yml
@@ -19,8 +19,8 @@ jobs:
             --header 'Accept: application/vnd.pagerduty+json;version=2' \
             --header 'Authorization: Token token=${{ secrets.PAGER_DUTY_TOKEN }}' \
             --header 'Content-Type: application/json' -o pager.json
-            echo $(cat pager.json | jq -c '.services[] | select(.name == "${{ github.event.repository.name }}")')
             echo ::set-output name=pager::$(cat pager.json | jq -c '.services[] | select(.name == "${{ github.event.repository.name }}")')
+       id: pager
      - name: "Determine status"
        id: determine-status
        run: |
