--- a/.github/workflows/check-pager-duty.yml
+++ b/.github/workflows/check-pager-duty.yml
@@ -19,16 +19,15 @@ jobs:
             --header 'Accept: application/vnd.pagerduty+json;version=2' \
             --header 'Authorization: Token token=${{ secrets.PAGER_DUTY_TOKEN }}' \
             --header 'Content-Type: application/json' -o pager.json
-            echo ::set-output name=pager::$(cat pager.json | jq -c '.services[] | select(.name == "${{ github.event.repository.name }}22")')
+            echo ::set-output name=pager::$(cat pager.json | jq -c '.services[] | select(.name == "${{ github.event.repository.name }}")')
        id: pager
      - name: "Determine status"
        id: determine-status
        run: |
-        echo ${{ steps.pager.outputs.pager }}
-        if [ "${{ steps.pager.outputs.pager }}" = "success" ]; then
-          echo "::set-output name=status::success"
-        else
+        if [ -z "${{ steps.pager.outputs.pager }}" ]; then
           echo "::set-output name=status::failure"
+        else
+          echo "::set-output name=status::success"
         fi
      - name: "Update check run result"
        uses: port-labs/port-github-action@v1
@@ -44,6 +43,6 @@ jobs:
          relations: |
            {
              "service": "${{ github.event.repository.name }}",
-             "check": "snyk-vulnerabilties"
+             "check": "pager-duty"
            } 
         
