--- a/.github/workflows/check-has-readme.yml
+++ b/.github/workflows/check-has-readme.yml
@@ -19,7 +19,7 @@ jobs:
      - name: "Determine status"
        id: determine-status
        run: |
-        if [ "${{ steps.is-readme-exist.outputs.exists }}" = "true" ]; then
+        if [ "${{ steps.is-readme-exist.outputs.file_exists }}" = "true" ]; then
           echo "::set-output name=status::success"
         else
           echo "::set-output name=status::failure"
