--- a/.github/workflows/run-maturity-tests.yml
+++ b/.github/workflows/run-maturity-tests.yml
@@ -18,7 +18,14 @@ jobs:
       PORT_CLIENT_ID: ${{ secrets.PORT_CLIENT_ID }}
       PORT_CLIENT_SECRET: ${{ secrets.PORT_CLIENT_SECRET }}
       PAGER_DUTY_TOKEN: ${{ secrets.PAGER_DUTY_TOKEN }}
-      
+  
+  check-pager-duty-team:
+    uses: ./.github/workflows/check-pager-duty-team.yml
+    secrets: 
+      PORT_CLIENT_ID: ${{ secrets.PORT_CLIENT_ID }}
+      PORT_CLIENT_SECRET: ${{ secrets.PORT_CLIENT_SECRET }}
+      PAGER_DUTY_TOKEN: ${{ secrets.PAGER_DUTY_TOKEN }}
+
   check-snyk-vulnerabilities-python:
     uses: ./.github/workflows/check-snyk-vulnerabilities-python.yml
     secrets: 
@@ -26,8 +33,6 @@ jobs:
       PORT_CLIENT_SECRET: ${{ secrets.PORT_CLIENT_SECRET }}
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-  # service pager
-  # team pagere
   # on call pager
   # sentry
   # check regulations
