--- a/.github/workflows/check-has-readme.yml
+++ b/.github/workflows/check-has-readme.yml
@@ -34,7 +34,9 @@ jobs:
          blueprint: CheckRun
          properties: |
            {
-              "status": "${{ steps.determine-status.outputs.status }}"
+              "status": "${{ steps.determine-status.outputs.status }}",
+              "url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+              "buildId": "${{ env.run_id }}"
            }
          relations: |
            {
