--- a/.github/workflows/check-is-using-sentry.yml
+++ b/.github/workflows/check-is-using-sentry.yml
@@ -29,6 +29,7 @@ jobs:
        with:
          clientId: ${{ secrets.PORT_CLIENT_ID }}
          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
+         title: sentry-${{ github.event.repository.name }}
          blueprint: CheckRun
          properties: |
            {
