--- a/.github/workflows/check-pager-duty.yml
+++ b/.github/workflows/check-pager-duty.yml
@@ -34,7 +34,7 @@ jobs:
        with:
          clientId: ${{ secrets.PORT_CLIENT_ID }}
          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-         title: pager-duty-checkrun-${{ github.event.repository.name }}
+         title: pager-${{ github.event.repository.name }}
          blueprint: CheckRun
          properties: |
            {
