--- a/.github/workflows/check-linked-issues.yml
+++ b/.github/workflows/check-linked-issues.yml
@@ -13,7 +13,7 @@ on:
       PORT_CLIENT_SECRET: 
         required: true
 jobs:
-  check-has-readme:
+  check-linked-issues:
     runs-on: ubuntu-latest
     steps:
      - uses: nearform/github-action-check-linked-issues@v1
