--- a/.github/workflows/check-linked-issues.yml
+++ b/.github/workflows/check-linked-issues.yml
@@ -25,7 +25,7 @@ jobs:
      - name: "Determine status"
        id: determine-status
        run: |
-        cat ${{ steps.bugs.outputs.path }} 
+        cat ${{ steps.issues.outputs.path }} 
         if [ ${{ steps.check-linked-issues.outputs.linked_issues_count }} < ${{ inputs.GITHUB_MAX_ISSUES }} ]; then
           echo "::set-output name=status::success"
         else
