--- a/.github/workflows/check-linked-issues.yml
+++ b/.github/workflows/check-linked-issues.yml
@@ -26,7 +26,7 @@ jobs:
        id: determine-status
        run: |
         ls -l 
-        cat _matching-issues.txt
+        cat __matching-issues.txt
         if [ ${{ steps.check-linked-issues.outputs.linked_issues_count }} < ${{ inputs.GITHUB_MAX_ISSUES }} ]; then
           echo "::set-output name=status::success"
         else
