--- a/.github/workflows/check-linked-issues.yml
+++ b/.github/workflows/check-linked-issues.yml
@@ -28,7 +28,7 @@ jobs:
         cat __matching-issues.txt
         issues_number=$(cat __matching-issues.txt | wc -l)
         echo $issues_number
-        if [ "$issues_number" -lt "${{ inputs.GITHUB_MAX_ISSUES }}"" ]; then
+        if [ "$issues_number" -lt "${{ inputs.GITHUB_MAX_ISSUES }}" ]; then
           echo "::set-output name=status::success"
         else
           echo "::set-output name=status::failure"
